--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <!--Heading End-->
                     <tr>
                         <td width="40%">
-                            <img src="image,/me1.jpeg" alt="Zobia Jawed"  width="90%">
+                            <img src="me1.jpeg" alt="Zobia Jawed"  width="90%">
                         </td>
                         <td width="60%">
                             <font face="arial" color="#ffffff" size="4">
@@ -139,13 +139,13 @@
                     <!--Heading End-->
                     <tr>
                         <td width="33%">
-                        <img src="image,/service 1.jpeg" alt="Service1"  width="100%">
+                        <img src="service 1.jpeg" alt="Service1"  width="100%">
                         </td>
                         <td width="33%">
-                        <img src="image,/service2.png" alt="Service1"  width="100%">
+                        <img src="service2.png" alt="Service1"  width="100%">
                         </td>
                         <td width="33%">
-                  <img src="image,/service3.jpg" alt="Service1"  width="100%">
+                  <img src="service3.jpg" alt="Service1"  width="100%">
                 </td>
                     </tr>
                     <tr>
@@ -249,7 +249,7 @@
                            </font>
                         </td>
                         <td valign="top">
-                            <img src="image,/achivements.jpeg"  width="90%">
+                            <img src="achivements.jpeg"  width="90%">
                         </td>
                         
                     </tr>
